--- a/src/addons/proxymonitor/metaservice/build.gradle
+++ b/src/addons/proxymonitor/metaservice/build.gradle
@@ -74,10 +74,12 @@ tasks.register('runProxymonitorMetaserviceTest', JavaExec) {
         '-Dxroad.proxy.client-httpclient-so-linger=-1',
         '-Dxroad.proxy.server-connector-so-linger=-1',
         '-Dxroad.proxy.serverServiceHandlers=ee.ria.xroad.proxy.serverproxy.ProxyMonitorServiceHandlerImpl',
-        '-Dxroad.common.grpc-internal-tls-enabled=false'
+        '-Dxroad.common.grpc-internal-tls-enabled=false',
+        '-Dtest.queries.dir=src/test/queries'
 
     mainClass = 'ee.ria.xroad.proxy.testsuite.ProxyTestSuite'
     classpath = sourceSets.test.runtimeClasspath
+    classpath += project(":proxy:application").sourceSets.main.runtimeClasspath
 }
 
 jacoco {
