--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -39,7 +39,8 @@ include "proxy:application"
 include "proxy:core"
 include "signer:application"
 include "signer:core"
-include "configuration-proxy"
+include "configuration-proxy:application"
+include "configuration-proxy:core"
 include "configuration-client:confclient-rpc-client"
 include "configuration-client:application"
 include "configuration-client:core"
