--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -64,25 +64,14 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         working-directory: ./src
         run: ./gradlew -Dorg.gradle.jvmargs=-Xmx6g -PsonarqubeHost=https://sonarcloud.io -PsonarqubeProjectKey=nordic-institute_X-Road -PsonarqubeOrganization=nordic-institute -PxroadBuildType=RELEASE --stacktrace build sonar test intTest runProxyTest runMetaserviceTest runProxymonitorMetaserviceTest jacocoTestReport -Pfrontend-npm-audit
-      - name: Test report unit tests
+      - name: Test report
         env:
           NODE_OPTIONS: '--max-old-space-size=6144'
         uses: dorny/test-reporter@v1
         if: success() || failure()
         with:
-          name: Unit tests
-          path: src/**/build/test-results/test/**/TEST-*.xml
-          reporter: java-junit
-          list-suites: 'failed'
-          list-tests: 'failed'
-      - name: Test report int tests
-        env:
-          NODE_OPTIONS: '--max-old-space-size=6144'
-        uses: dorny/test-reporter@v1
-        if: success() || failure()
-        with:
-          name: Integration tests
-          path: src/**/build/test-results/!test/**/TEST-*.xml
+          name: Unit and integration tests
+          path: src/**/build/test-results/**/TEST-*.xml
           reporter: java-junit
           list-suites: 'failed'
           list-tests: 'failed'
