--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -65,13 +65,13 @@ jobs:
         working-directory: ./src
         run: ./gradlew -Dorg.gradle.jvmargs=-Xmx6g -PsonarqubeHost=https://sonarcloud.io -PsonarqubeProjectKey=nordic-institute_X-Road -PsonarqubeOrganization=nordic-institute -PxroadBuildType=RELEASE --stacktrace build sonar test intTest runProxyTest runMetaserviceTest runProxymonitorMetaserviceTest jacocoTestReport -Pfrontend-npm-audit
       - name: Test report
-        env:
-          NODE_OPTIONS: '--max-old-space-size=12288'
+#        env:
+#          NODE_OPTIONS: '--max-old-space-size=12288'
         uses: dorny/test-reporter@v1
         if: success() || failure()
         with:
           name: Unit and integration tests
-          path: src/**/build/test-results/**/TEST-*.xml
+          path: "src/**/build/test-results/**/TEST-*.xml"
           reporter: java-junit
           list-suites: 'failed'
           list-tests: 'failed'
