--- a/src/security-server/admin-service/int-test/build.gradle
+++ b/src/security-server/admin-service/int-test/build.gradle
@@ -48,6 +48,9 @@ tasks.register('intTest', Test) {
         showCauses(true)
         showStandardStreams(true)
     }
+    reports {
+        junitXml.includeSystemOutLog = false // defaults to true
+    }
 
     shouldRunAfter test
 }
