--- a/src/build.gradle
+++ b/src/build.gradle
@@ -94,6 +94,9 @@ configure(subprojects.findAll { !["shared-ui", "ui"].contains(it.name) }) {
 
     test {
         useJUnitPlatform()
+        reports {
+            junitXml.includeSystemOutLog = false // defaults to true
+        }
     }
 
     tasks.register('testJar', Jar) {
