--- a/src/central-server/admin-service/int-test/build.gradle
+++ b/src/central-server/admin-service/int-test/build.gradle
@@ -49,6 +49,9 @@ tasks.register('intTest', Test) {
         showCauses(true)
         showStandardStreams(true)
     }
+    reports {
+        junitXml.includeSystemOutLog = false // defaults to true
+    }
 
     shouldRunAfter test
 }
