--- a/src/central-server/management-service/int-test/build.gradle
+++ b/src/central-server/management-service/int-test/build.gradle
@@ -40,6 +40,9 @@ tasks.register('intTest', Test) {
         showCauses(true)
         showStandardStreams(true)
     }
+    reports {
+        junitXml.includeSystemOutLog = false // defaults to true
+    }
 
     shouldRunAfter test
 }
