--- a/src/proxy/core/build.gradle
+++ b/src/proxy/core/build.gradle
@@ -67,6 +67,9 @@ tasks.register('integrationTest', Test) {
     useJUnit {
         includeCategories 'ee.ria.xroad.proxy.testutil.IntegrationTest'
     }
+    reports {
+        junitXml.includeSystemOutLog = false // defaults to true
+    }
 }
 
 tasks.register('runBatchSigner', JavaExec) {
@@ -99,6 +102,9 @@ tasks.register('intTest', Test) {
         showExceptions(true)
         showCauses(true)
         showStandardStreams(true)
+    }
+    reports {
+        junitXml.includeSystemOutLog = false // defaults to true
     }
 }
 
