--- a/src/signer/core/build.gradle
+++ b/src/signer/core/build.gradle
@@ -97,6 +97,9 @@ tasks.register('intTest', Test) {
         showCauses(true)
         showStandardStreams(true)
     }
+    reports {
+        junitXml.includeSystemOutLog = false // defaults to true
+    }
 }
 
 tasks.named('check') {
