--- a/src/addons/metaservice/build.gradle
+++ b/src/addons/metaservice/build.gradle
@@ -41,7 +41,7 @@ tasks.register('runMetaserviceTest', JavaExec) {
         '-Dxroad.proxy.server-connector-so-linger=-1',
         '-Dxroad.proxy.serverServiceHandlers=ee.ria.xroad.proxy.serverproxy.MetadataServiceHandlerImpl',
         '-Dxroad.proxy.clientHandlers=ee.ria.xroad.proxy.clientproxy.MetadataHandler',
-        '-Dxroad.common.grpc-internal-tls-enabled=false',
+        '-Dxroad.proxy.grpc-internal-tls-enabled=false',
         '-Dtest.queries.dir=src/test/queries'
 
     mainClass = 'ee.ria.xroad.proxy.testsuite.ProxyTestSuite'
