--- a/src/addons/metaservice/build.gradle
+++ b/src/addons/metaservice/build.gradle
@@ -32,10 +32,10 @@ tasks.register('runMetaserviceTest', JavaExec) {
     jvmArgs '-Dxroad.proxy.ocspCachePath=build/ocsp-cache',
         '-Dxroad.tempFiles.path=build/attach-tmp',
         '-Dxroad.proxy.configurationFile=../../systemtest/conf/local_test/serverconf_producer.xml',
-        '-Dxroad.proxy.jetty-serverproxy-configuration-file=src/test/resources/serverproxy.xml',
-        '-Dxroad.proxy.jetty-clientproxy-configuration-file=src/test/resources/clientproxy.xml',
+        '-Dxroad.proxy.server.jetty-configuration-file=src/test/resources/serverproxy.xml',
+        '-Dxroad.proxy.client-proxy.jetty-configuration-file=src/test/resources/clientproxy.xml',
         '-Dlogback.configurationFile=src/test/resources/logback-metaservicetest.xml',
-        '-Dxroad.proxy.jetty-ocsp-responder-configuration-file=src/test/resources/ocsp-responder.xml',
+        '-Dxroad.proxy.ocsp-responder.jetty-configuration-file=src/test/resources/ocsp-responder.xml',
         '-Dxroad.proxy.client-connector-so-linger=-1',
         '-Dxroad.proxy.client-httpclient-so-linger=-1',
         '-Dxroad.proxy.server-connector-so-linger=-1',
