chore: serverconf property renamed

--- a/src/proxy/application/src/test/resources/application.yaml
+++ b/src/proxy/application/src/test/resources/application.yaml
@@ -60,7 +60,7 @@ xroad:
       grpc-port: 5567
       grpc-tls-enabled: false
   common:
-    server-conf:
+    serverconf:
       cache-period: 0
       hibernate:
         dialect: org.hibernate.dialect.HSQLDialect
