--- a/src/monitor/application/src/main/resources/application.yaml
+++ b/src/monitor/application/src/main/resources/application.yaml
@@ -23,7 +23,7 @@ xroad:
       grpc-tls-enabled: false
   common:
     global-conf-remoting-enabled: true
-    server-conf:
+    serverconf:
       cache-period: 60
       client-cache-size: 100
       service-cache-size: 1000
