--- a/src/proxy/application/src/main/resources/application.yaml
+++ b/src/proxy/application/src/main/resources/application.yaml
@@ -74,7 +74,7 @@ xroad:
     enabled: true
   common:
     global-conf-remoting-enabled: true
-    server-conf:
+    serverconf:
       cache-period: 60
       client-cache-size: 100
       service-cache-size: 1000
