chore: serverconf db properties for containerized security server

--- a/Docker/securityserver-v2/temp-mount-xroad/db.properties
+++ b/Docker/securityserver-v2/temp-mount-xroad/db.properties
@@ -1,6 +1,6 @@
-serverconf.hibernate.connection.url = jdbc:postgresql://db-serverconf:5432/serverconf
-serverconf.hibernate.connection.username=serverconf
-serverconf.hibernate.connection.password=secret
+#serverconf.hibernate.connection.url = jdbc:postgresql://db-serverconf:5432/serverconf
+#serverconf.hibernate.connection.username=serverconf
+#serverconf.hibernate.connection.password=secret
 
 messagelog.hibernate.connection.url = jdbc:postgresql://db-messagelog:5432/messagelog
 messagelog.hibernate.connection.username=messagelog
