--- a/Docker/securityserver-v2/config/application-override.yaml
+++ b/Docker/securityserver-v2/config/application-override.yaml
@@ -2,6 +2,11 @@ xroad:
   common:
     global-conf-remoting-enabled: true
     grpc-internal-host: 0.0.0.0
+    serverconf:
+      hibernate:
+        connection:
+          url: jdbc:postgresql://db-serverconf:5432/serverconf
+          password: secret
   configuration-client:
     grpc-tls-enabled: true
     grpc-host: confclient
