--- a/Docker/securityserver/files/ss-xroad.conf
+++ b/Docker/securityserver/files/ss-xroad.conf
@@ -59,6 +59,7 @@ stdout_logfile_maxbytes=0
 [program:xroad-configuration-service]
 command=/usr/share/xroad/bin/xroad-configuration-service
 user=xroad
+startsecs=5
 autorestart=true
 stopasgroup=true
 redirect_stderr=true
