--- a/src/signer/application/build.gradle
+++ b/src/signer/application/build.gradle
@@ -8,6 +8,8 @@ dependencies {
     implementation project(':common:common-properties')
     implementation project(':common:common-rpc')
     implementation project(':signer:core')
+
+    testImplementation(libs.springBoot.starterTest)
 }
 
 jar {
