--- a/src/addons/messagelog/messagelog-archiver/application/src/main/resources/application.yaml
+++ b/src/addons/messagelog/messagelog-archiver/application/src/main/resources/application.yaml
@@ -11,6 +11,13 @@ server:
   port: 5598
 
 xroad:
+  common:
+    global-conf-remoting-enabled: true
+    grpc:
+      channel:
+        configuration-client:
+          host: 127.0.0.1
+          port: 5665
   message-log:
     timestamper-client-connect-timeout: 20000
     timestamper-client-read-timeout: 60000
@@ -25,11 +32,5 @@ xroad:
     hash-algo-id: SHA-512
     archive-transfer-command:
     message-body-logging: true
-  configuration-client:
-      grpc-host: localhost
-      grpc-port: 5665
-      grpc-tls-enabled: false
-  common:
-    global-conf-remoting-enabled: true
   node:
     type:
