--- a/src/op-monitor-daemon/application/src/main/resources/application-containerized.yaml
+++ b/src/op-monitor-daemon/application/src/main/resources/application-containerized.yaml
@@ -1,2 +1,9 @@
+xroad:
+  common:
+    grpc:
+      channel:
+        configuration-client:
+          host: 0.0.0.0
+
 logging:
   config: classpath:logback-containerized.xml
