--- a/src/op-monitor-daemon/application/src/main/resources/application.yaml
+++ b/src/op-monitor-daemon/application/src/main/resources/application.yaml
@@ -23,8 +23,9 @@ xroad:
 
   common:
     global-conf-remoting-enabled: true
-
-  configuration-client:
-    grpc-host: localhost
-    grpc-port: 5665
-    grpc-tls-enabled: false
+    grpc:
+      channel:
+        configuration-client:
+          host: 127.0.0.1
+          port: 5665
+          deadline-after: 60000
