--- a/src/signer/application/src/main/resources/application-containerized.yaml
+++ b/src/signer/application/src/main/resources/application-containerized.yaml
@@ -1,6 +1,8 @@
 xroad:
   signer:
     ocsp-cache-path: /opt/app/cache
+    grpc:
+      listen-address: 0.0.0.0
 
 logging:
   config: classpath:logback-containerized.xml
