chore: wrap edc components as spring boot applications

--- a/src/central-server/ds-catalog-service/build.gradle
+++ b/src/central-server/ds-catalog-service/build.gradle
@@ -34,14 +34,11 @@ dependencies {
     runtimeOnly(libs.edc.fc.core)
     runtimeOnly(libs.edc.fc.api)
 
-    implementation(project(":security-server:edc:extensions:common:xroad-conf"))
     implementation(project(":security-server:edc:extensions:control-plane:xroad-identity-and-trust"))
     implementation(project(":security-server:edc:extensions:common:xroad-webserver"))
 
     testImplementation libs.edc.junit
-    testImplementation(project(':common:common-test')) {
-        exclude group: 'org.eclipse.jetty'
-    }
+    testImplementation(project(':common:common-test'))
     testImplementation('org.springframework:spring-test:6.1.12')
 }
 
