--- a/src/security-server/edc/runtime/data-plane/build.gradle
+++ b/src/security-server/edc/runtime/data-plane/build.gradle
@@ -1,14 +1,8 @@
-import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
-
 plugins {
-    id("java")
-    id("application")
-    alias(libs.plugins.shadow)
+    alias(libs.plugins.springBoot)
 }
 
 configurations {
-    sqlDependencies
-
     configureEach {
         exclude group: 'org.eclipse.edc', module: 'jetty-core'
         exclude group: 'com.apicatalog', module: 'titanium-json-ld-jre8' //transient dep that creates errors
@@ -16,8 +10,11 @@ configurations {
 }
 
 dependencies {
+    implementation(project(':common:common-service-bootstrap')) {
+        exclude group: 'org.eclipse.jetty'
+    }
+
     runtimeOnly(libs.bundles.connector)
-    runtimeOnly(libs.edc.config.filesystem)
     runtimeOnly(libs.edc.ext.observability)
     runtimeOnly(libs.edc.dataplane.core)
     runtimeOnly(libs.edc.dataplane.api.control.config)
@@ -30,76 +27,41 @@ dependencies {
     runtimeOnly(libs.edc.dpf.selector.client) // for the selector service -> self registration
     runtimeOnly(libs.edc.vault.hashicorp)
 
-    sqlDependencies(libs.bundles.sql.edc.dataplane)
+    runtimeOnly(libs.bundles.sql.edc.dataplane)
 
     implementation libs.bundles.edc.monitoring
     implementation 'io.opentelemetry:opentelemetry-exporter-otlp:1.38.0'
 
     // x-road extensions
-    implementation(project(":security-server:edc:extensions:common:xroad-conf"))
     implementation(project(":security-server:edc:extensions:common:xroad-jsonld"))
-    implementation(project(":security-server:edc:extensions:data-plane:xroad-messagelog")) {
-        exclude group: 'org.eclipse.jetty'
-    }
-    implementation(project(":security-server:edc:extensions:data-plane:xroad-data-plane-public-api")) {
-        exclude group: 'org.eclipse.jetty'
-    }
-    implementation(project(":security-server:edc:extensions:data-plane:xroad-data-plane-iam")) {
-        exclude group: 'org.eclipse.jetty'
-    }
-    implementation(project(":security-server:edc:extensions:common:xroad-jws-signer")) {
-        exclude group: 'org.eclipse.jetty'
-    }
+    implementation(project(":security-server:edc:extensions:data-plane:xroad-messagelog"))
+    implementation(project(":security-server:edc:extensions:data-plane:xroad-data-plane-public-api"))
+    implementation(project(":security-server:edc:extensions:data-plane:xroad-data-plane-iam"))
+    implementation(project(":security-server:edc:extensions:common:xroad-jws-signer"))
     implementation(project(":security-server:edc:extensions:common:xroad-webserver"))
-
+    implementation(project(":security-server:edc:extensions:common:xroad-spring-bridge"))
+    implementation(libs.logback.classic)
     implementation libs.apache.commonsLang3
 
     testImplementation libs.edc.junit
     testImplementation libs.mockito.jupiter
 }
 
-application {
-    mainClass.set("org.eclipse.edc.boot.system.runtime.BaseRuntime")
+jar {
+    enabled = false
 }
 
-
-var distTar = tasks.named("distTar")
-var distZip = tasks.named("distZip")
-
-sourceSets {
-    main {
-        resources {
-            srcDir 'src/main/resources'
-        }
-    }
-}
-
-shadowJar {
-    setProperty("zip64", true)
-    mergeServiceFiles()
-    archiveFileName.set("edc-data-plane-inmemory.jar")
-    dependsOn(distTar, distZip)
-}
-
-tasks.register('shadowJarWithSql', ShadowJar) {
-    setProperty("zip64", true)
-    from sourceSets.main.output
-    configurations = [project.configurations.runtimeClasspath, project.configurations.sqlDependencies]
-    exclude('META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA')
-    archiveFileName.set("edc-data-plane.jar")
+bootJar {
+    enabled = true
+    archiveBaseName = 'edc-data-plane'
     manifest {
-        attributes 'Main-Class': 'org.eclipse.edc.boot.system.runtime.BaseRuntime'
+        attributes(
+            'Implementation-Title': 'X-Road EDC Data Plane',
+            'Implementation-Version': "$xroadVersion-$xroadBuildType",
+        )
     }
-    mergeServiceFiles()
-    dependsOn(distTar, distZip)
-}
-
-processResources {
-    duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
 
 archUnit {
     skip = true
 }
-
-assemble.dependsOn("shadowJarWithSql")
