--- a/src/security-server/edc/xroad-edc-security/build.gradle
+++ b/src/security-server/edc/xroad-edc-security/build.gradle
@@ -5,12 +5,8 @@ plugins {
 
 dependencies {
     api(project(':common:common-keyconf'))
-    api(project(':common:common-globalconf')) {
-        exclude group: 'org.eclipse.jetty'
-    }
-    api(project(':common:common-verifier')) {
-        exclude group: 'org.eclipse.jetty'
-    }
+    api(project(':common:common-globalconf'))
+    api(project(':common:common-verifier'))
     api project(':signer-protocol')
 
     api libs.dss.jades
