feat: Drop Gaia-X & introduce X-Road 8 Membership Credential Ecosystem

--- a/Docker/centralserver/files/cs-xroad.conf
+++ b/Docker/centralserver/files/cs-xroad.conf
@@ -60,3 +60,11 @@ startsecs=5
 autorestart=true
 priority=300
 stdout_logfile=/var/log/xroad/edc-connector.log
+
+[program:xroad-edc-credential-service]
+command=/usr/share/xroad/bin/xroad-edc-credential-service
+user=root
+startsecs=5
+autorestart=true
+priority=300
+stdout_logfile=/var/log/xroad/edc-credential-service.log
