--- a/Docker/centralserver/files/edc/etc/edc-connector.properties
+++ b/Docker/centralserver/files/edc/etc/edc-connector.properties
@@ -39,3 +39,6 @@ edc.catalog.cache.partition.num.crawlers=2
 
 edc.vault.hashicorp.url=http://openbao:8200
 edc.vault.hashicorp.token=00000000-0000-0000-0000-000000000001
+
+
+xroad.common.global.conf.remoting.enabled=false
