--- a/Docker/centralserver/files/edc/etc/edc-identity-hub.properties
+++ b/Docker/centralserver/files/edc/etc/edc-identity-hub.properties
@@ -2,19 +2,22 @@ edc.participant.id=did:web:localhost
 
 web.http.port=9391
 web.http.path=/api
-web.http.management.port=9393
-web.http.management.path=/management
+web.http.identity.port=9393
+web.http.identity.path=/identity
 web.http.protocol.port=9395
 web.http.protocol.path=/protocol
 web.http.did.path=/
 web.http.did.port=9396
 web.http.resolution.path=/resolution
-web.http.resolution.port=20002
+web.http.resolution.port=20001
 
 edc.http.client.https.enforce=true
 
-# Key ID in the signer used for signing VCs, VPs & providing the public counterpart in the DID
+# ID of keypair residing in signer used for DID
 edc.did.key.id=key-id
 
 edc.vault.hashicorp.url=http://openbao:8200
 edc.vault.hashicorp.token=00000000-0000-0000-0000-000000000001
+
+
+xroad.common.global.conf.remoting.enabled=false
