--- a/Docker/securityserver/files/edc/etc/edc-control-plane.properties
+++ b/Docker/securityserver/files/edc/etc/edc-control-plane.properties
@@ -31,3 +31,6 @@ edc.vault.hashicorp.token=00000000-0000-0000-0000-000000000001
 
 edc.negotiation.state-machine.iteration-wait-millis=300
 edc.policy.monitor.state-machine.iteration-wait-millis=300
+
+
+xroad.common.global.conf.remoting.enabled=true
