--- a/Docker/securityserver/files/edc/etc/edc-data-plane.properties
+++ b/Docker/securityserver/files/edc/etc/edc-data-plane.properties
@@ -22,3 +22,6 @@ edc.transfer.state-machine.iteration-wait-millis=300
 edc.dataplane.state-machine.iteration-wait-millis=300
 
 xroad.messagelog.enabled=true
+
+
+xroad.common.global.conf.remoting.enabled=true
