--- a/Docker/securityserver/files/edc/etc/edc-identity-hub.properties
+++ b/Docker/securityserver/files/edc/etc/edc-identity-hub.properties
@@ -13,12 +13,14 @@ web.http.resolution.port=20001
 
 edc.http.client.https.enforce=true
 
-# Key ID in the signer used for signing VCs, VPs & providing the public counterpart in the DID
+# ID of keypair residing in signer used for DID
 edc.did.key.id=key-id
 
 # Support for JSON-LD (verifiable credentials)
 edc.jsonld.https.enabled=true
-edc.jsonld.http.enabled=true
 
 edc.vault.hashicorp.url=http://openbao:8200
 edc.vault.hashicorp.token=00000000-0000-0000-0000-000000000001
+
+
+xroad.common.global.conf.remoting.enabled=true
