--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -76,6 +76,7 @@ include 'central-server:management-service:int-test'
 include "central-server:registration-service"
 
 include 'central-server:ds-catalog-service'
+include 'central-server:ds-credential-service'
 
 include "security-server"
 include "security-server:openapi-model"
