--- a/src/common/common-acme/build.gradle
+++ b/src/common/common-acme/build.gradle
@@ -14,5 +14,8 @@ dependencies {
     implementation(platform(libs.springBoot.bom))
 
     implementation("org.springframework.boot:spring-boot-starter-web")
+
+    testImplementation project(':common:common-test')
+
 }
 
