--- a/src/addons/messagelog/messagelog-archiver/core/build.gradle
+++ b/src/addons/messagelog/messagelog-archiver/core/build.gradle
@@ -3,9 +3,10 @@ plugins {
 }
 
 dependencies {
+    api(project(':common:common-messagelog'))
+
     implementation(project(':common:common-scheduler'))
     implementation(project(':common:common-db'))
-    implementation(project(':common:common-messagelog'))
     implementation(project(':common:common-verifier'))
     implementation(project(':addons:messagelog:messagelog-db'))
     implementation(project(':asic-util'))
