--- a/src/proxy/application/src/main/resources/application.yaml
+++ b/src/proxy/application/src/main/resources/application.yaml
@@ -97,4 +97,10 @@ xroad:
     grpc-host: localhost
     grpc-port: 5560
     grpc-tls-enabled: false
-
+  messagelog:
+    hibernate:
+      connection.driver_class: org.postgresql.Driver
+      connection.url: jdbc:postgresql://127.0.0.1:5432/messagelog
+      connection.username: messagelog
+      hikari.dataSource.currentSchema: messagelog,public
+      jdbc.use_streams_for_binary: true
