--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -179,17 +179,6 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: allure-gh-pages
           publish_dir: allure-history
-      - name: Add link to the report as a comment 
-        uses: actions/github-script@v7
-        if: always()
-        with:
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: 'Central Server Allure report: https://nordic-institute.github.io/X-Road/central-server/ui-system-test/${{ github.run_number }}'
-            })
   RunSSSystemTests:
     name: Run Security Server system tests
     needs: BuildAndPackageWithUnitTests
@@ -279,17 +268,6 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: allure-gh-pages
           publish_dir: allure-history
-      - name: Add link to the report as a comment 
-        uses: actions/github-script@v7
-        if: always()
-        with:
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: 'Security Server Allure report: https://nordic-institute.github.io/X-Road/security-server/system-test/${{ github.run_number }}'
-            })
   RunE2ETests:
     name: Run E2E tests
     needs: BuildAndPackageWithUnitTests
@@ -392,14 +370,23 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: allure-gh-pages
           publish_dir: allure-history
-      - name: Add link to the report as a comment 
-        uses: actions/github-script@v7
-        if: always()
+  CreateAllureLinks:
+    name: Create Allure links
+    needs: [RunCSSystemTests, RunSSSystemTests, RunE2ETests]
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Generate links table
         with:
           script: |
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: 'E2E Allure report: https://nordic-institute.github.io/X-Road/e2e/${{ github.run_number }}'
+              body: `## Allure reports
+                | Test suite      | Report URL |
+                |-----------------|------------|
+                | Central Server  | [Link](https://nordic-institute.github.io/X-Road/central-server/ui-system-test/${{ github.run_number }}) |
+                | Security Server | [Link](https://nordic-institute.github.io/X-Road/security-server/system-test/${{ github.run_number }}) |
+                | E2E             | [Link](https://nordic-institute.github.io/X-Road/e2e/${{ github.run_number }}) |
+                `
             })
