--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -383,11 +383,12 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: `## Allure reports
-                | Test suite      | Report URL |
-                |-----------------|------------|
-                | Central Server  | [Link](https://nordic-institute.github.io/X-Road/central-server/ui-system-test/${{ github.run_number }}) |
-                | Security Server | [Link](https://nordic-institute.github.io/X-Road/security-server/system-test/${{ github.run_number }}) |
-                | E2E             | [Link](https://nordic-institute.github.io/X-Road/e2e/${{ github.run_number }}) |
-                `
+              body: `## Allure reports for run #{{ github.run_number }}
+
+            | Test suite      | Report URL |
+            |-----------------|------------|
+            | Central Server  | <a href="https://nordic-institute.github.io/X-Road/central-server/ui-system-test/${{ github.run_number }}" target="_blank">Report</a> |
+            | Security Server | <a href="https://nordic-institute.github.io/X-Road/security-server/system-test/${{ github.run_number }}" target="_blank">Report</a> |
+            | E2E             | <a href="https://nordic-institute.github.io/X-Road/e2e/${{ github.run_number }}" target="_blank">Report</a> |
+            `
             })
